--- a/.env.template
+++ b/.env.template
@@ -1,11 +1,42 @@
+# -------------------------- REQUIRED: where you cloned things --------------------------
+# Path to the Bounty Hunter service root (this repo). Controls default venv path at $BOUNTY_HUNTER_DIR/.v4env
+BOUNTY_HUNTER_DIR=~/BFCL
+
+# Path to the BFCL repo root (berkeley-function-call-leaderboard)
+BFCL_ROOT=~/BFCL/gorilla/berkeley-function-call-leaderboard
+
+
+# -------------------------- REQUIRED: GPU / BFCL runtime knobs --------------------------
+# Which device index(es) to expose (comma-separated ok)
+CUDA_VISIBLE_DEVICES=2
+# Order hint (leave as-is unless you know why to change it)
+CUDA_DEVICE_ORDER=PCI_BUS_ID
+
+# BFCL GPU settings
+BFCL_NUM_GPUS=1
+BFCL_GPU_UTIL=0.9
+
+
+# -------------------------- wallet / auth (unchanged; needed by the rest of your app) ----------
+VALIDATOR_NAME=
+COLDKEY=
+HOTKEY=
+
+# ---------- screener / watcher ----------
 MAX_CONCURRENT_TASKS=1
-SCREENER_HOTKEY="gpt4-code"
-WATCHER_HOST="localhost:8994"
-SCREENER_ID=""
-SCREENER_NAME=""
-SCREENER_SUPPORTED_BOUNTY_IDS=""
-COLDKEY=""
-HOTKEY=""
+WATCHER_HOST=192.168.69.194:8994
+SCREENER_ID=${VALIDATOR_NAME}BFCL
+SCREENER_NAME=${VALIDATOR_NAME}BFCL
+SCREENER_API_URL=http://192.168.69.157:8999
+SCREENER_SUPPORTED_BOUNTY_IDS=BFCLV4
 AUTH_ENABLED=true
 SCORER_AUTH_ENABLED=true
-SCORER_ALLOWED_HOTKEYS="5FuzgvtfbZWdKSRxyYVPAPYNaNnf9cMnpT7phL3s2T3Kkrzo"
+SCORER_ALLOWED_HOTKEYS=5CXRfP2ekFhe62r7q3vppRajJmGhTi7vwvb2yr79jveZ282w
+ALLOWED_HOTKEYS=5CXRfP2ekFhe62r7q3vppRajJmGhTi7vwvb2yr79jveZ282w
+
+# Optional: how long signed headers are valid (seconds)
+AUTH_SIGNATURE_TIMEOUT=300
+
+# ---------- timeouts ----------
+# how long a scoring subprocess can run (seconds)
+SCORING_TIMEOUT=7200
